# Practical-Application-of-LLMs

./: .gitignore  Sentiment-Analysis.ipynb  Text-Summarization.ipynb  hr_policy_long.txt  rag-hr.ipynb  ref_summary.txt
.ipynb_checkpoints/: Sentiment-Analysis-checkpoint.ipynb  Text-Summarization-checkpoint.ipynb  rag-hr-checkpoint.ipynb
hr_chroma_db/: chroma.sqlite3
research_project/: README.md  pyproject.toml
research_project/src/research_project/: crew.py  main.py
social_media_agent/: README.md  crew.py  pyproject.toml  report.md
social_media_agent/config/: agents.yaml  tasks.yaml
social_media_agent/src/social_media_agent/: crew.py  main.py
