[project]
name = "research_project"
version = "0.1.0"
description = "research_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
research_project = "research_project.main:run"
run_crew = "research_project.main:run"
train = "research_project.main:train"
replay = "research_project.main:replay"
test = "research_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
