[project]
name = "social_media_agent"
version = "0.1.0"
description = "social_media_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
social_media_agent = "social_media_agent.main:run"
run_crew = "social_media_agent.main:run"
train = "social_media_agent.main:train"
replay = "social_media_agent.main:replay"
test = "social_media_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
